# UAP-MACHINE-LEARNING

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
app/: main.py  utils.py
notebooks/: training_mushroom.ipynb
