[project]
name = "ujian_akhir_praktikum"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HarisRifky", email = "harisrifkyjuliantoro14@gmail.com"},
]
dependencies = ["streamlit==1.37.0", "tensorflow>=2.20.0", "scikit-learn>=1.7.2", "joblib>=1.5.3", "pandas>=2.3.3", "numpy>=2.2.6", "matplotlib>=3.10.8", "seaborn>=0.13.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
